# tui_lab

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/: canvas.h  controller.h  view.h
include/models/: circle.h  shape.h
src/: canvas.c  controller.c  main.c  view.c
src/models/: circle.c  rectangle.c  shape.c  triangle.c
testing/: CMakeLists.txt
testing/include/: testing.h
testing/src/: assertions.c  testing.c
tests/: CMakeLists.txt  main.c  test_model.c  test_model_circle.c
tests/mocks/: CMakeLists.txt  canvas.c  canvas.h
